--- a/mlp_class.ipynb
+++ b/mlp_class.ipynb
@@ -217,12 +217,92 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mnist = tf.keras.datasets.mnist\n",
+    "(X_train, y_train), (X_test, y_test) = mnist.load_data()\n",
+    "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Flatten, Conv2d, MaxPooling2D,Dense"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w, h = X_test.shape[1], X_test.shape[2]\n",
+    "\n",
+    "X_train = X_train.reshape(-1, w, h, 1)\n",
+    "X_test = X_test.reshape(-1, w, h, 1)\n",
+    "\n",
+    "X_train, X_test = X_train/255, X_test/255"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential()\n",
+    "model.add(Conv2D(32,(3,3), activation='relu', input_shape=X_train.shape[1:]))\n",
+    "model.add(MaxPooling2D(pool_size = (2,2)))\n",
+    "\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(32),activation = \"relu\"))\n",
+    "model.add(Dense(1,activation = \"relu\"))\n",
+    "model.add(Dense(10, activation=\"softmax\"))\n",
+    "model.compile(metrics=[\"accuracy\"],optimizer = \"adam\", loss=\"categorical_crossentropy\")\n",
+    "model.fit(X_train,y_train,epoch=5,batch_size=32)\n",
+    "model.save(\"digits.h5\")\n",
+    "saved.model = tf.keras.models.load.model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import cv2\n",
+    "import numpy\n",
+    "images_count = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(images_count):\n",
+    "    file_path = f\"./digits/image{i}.png\"\n",
+    "    if os.path.isfile(file,path):\n",
+    "        image = np.array(cv2.inread(file_path))\n",
+    "        image = np.invert(image)\n",
+    "        image_reshape = image.reshape(-1,28,28,1)\n",
+    "        prediction = saved_model.predict([image])\n",
+    "        y_pred = np.argmax(prediction)\n",
+    "        print(f\"Image {i} is a {y_pred}\")\n",
+    "        print(\"Actual image is \")\n",
+    "        plt.imshow(image,camap=\"grey\")\n",
+    "        plt.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -236,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
